# bimo

./: CMakeLists.txt  mpu6050_hardware.xml  package.xml
config/: joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  view_bot.rviz
description/: camera.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
include/: mpu6050_hardware_interface.hpp
launch/: ball_tracker.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rplidar.launch.py  rsp.launch.py
src/: mpu6050_hardware_interface.cpp  mpu6050_lib.cpp  mpu6050_offsets.cpp
worlds/: obstacles.world
